--- a/mechine_learning/DeepLearning_001.ipynb
+++ b/mechine_learning/DeepLearning_001.ipynb
@@ -14,15 +14,21 @@
    "outputs": [],
    "source": [
     "class NeuralNetwork:\n",
-    "    def __int__(self, input_nodes, hidden_nodes, output_nodes, learning_rate):\n",
+    "    def __int__(self, input_nodes, hidden_nodes, output_nodes, learning_rate, weight_ih, weight_ho):\n",
     "        self.i_nodes = input_nodes\n",
     "        self.h_nodes = hidden_nodes\n",
     "        self.o_nodes = output_nodes\n",
     "        self.l_rate = learning_rate\n",
+    "        \n",
+    "        self.wih = weight_ih\n",
+    "        self.who = weight_ho\n",
+    "        \n",
     "        pass\n",
     "    def train():\n",
     "        pass\n",
     "    def predict():\n",
+    "        \n",
+    "        \n",
     "        pass\n",
     "        \n",
     "    \n",
@@ -67,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
