--- a/mechine_learning/DeepLearning_001.ipynb
+++ b/mechine_learning/DeepLearning_001.ipynb
@@ -9,6 +9,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "import scipy.special as ssp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.93185587, 0.15323608, 0.29782525],\n",
+       "       [0.5695228 , 0.47543403, 0.60890931],\n",
+       "       [0.92254109, 0.52867665, 0.27096691]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -20,14 +50,18 @@
     "        self.o_nodes = output_nodes\n",
     "        self.l_rate = learning_rate\n",
     "        \n",
-    "        self.wih = weight_ih\n",
-    "        self.who = weight_ho\n",
+    "        self.wih = numpy.random.rand(self.i_nodes, self.h_nodes) - 0.5\n",
+    "        self.who = numpy.random.rand(self.h_nodes, self.o_nodes) - 0.5\n",
+    "        \n",
+    "        self.activity_function = lambda x: ssp.expit(x)\n",
     "        \n",
     "        pass\n",
     "    def train():\n",
     "        pass\n",
-    "    def predict():\n",
-    "        \n",
+    "    def predict(self, input_list):\n",
+    "         hidden_ouput = self.activity_function(numpy.dot(self.wih, inputs))\n",
+    "         final_output = self.activity_function(numpy.dot(self.who, hidden_ouput))\n",
+    "         return final_output   \n",
     "        \n",
     "        pass\n",
     "        \n",
